syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "model.proto";

message IssueTokenByPasswordRequest {
	OpEntity entity = 1;
}

message IssueTokenByPasswordResponse {
	Token token = 1;
}
